test/expected/large/mlpipelineautomation/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: mlpipelineautomation
    foo.com/duversion: 0.0.180-20190921.1569051268585
    foo.com/version: 0.0.180
  labels:
    app.kubernetes.io/name: mlpipelineautomation
    helm.sh/chart: mlpipelineautomation-0.0.180
  name: mlpipelineautomation
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mlpipelineautomation
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mlpipelineautomation
        app.kubernetes.io/name: mlpipelineautomation
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/mlrning-125.0.0-x64_redhat_linux_7-docker-prod/foo-ml-pipeline-automation:0.0.180-20190921.1569051268585
        imagePullPolicy: IfNotPresent
        name: mlpipelineautomation
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      initContainers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        image: docker.foo.com/yesbut/init-blocker:1.7
        name: init-blocker
